Bug 100430 - [radv] graphical glitches on dolphin emulator
Summary: [radv] graphical glitches on dolphin emulator
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: 17.3
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-28 06:20 UTC by jdruel
Modified: 2018-05-15 19:59 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
mariokart vulkan rendering problem (784.42 KB, image/png)
2017-03-28 06:20 UTC, jdruel
Details
bad colors on MarioKart (fifo) (1.74 MB, application/octet-stream)
2017-03-28 16:57 UTC, jdruel
Details
White Square on MarioKart (fifo) (13.29 MB, application/octet-stream)
2017-03-28 16:58 UTC, jdruel
Details
Screen part missing (fifo) (9.85 MB, application/octet-stream)
2017-03-28 17:00 UTC, jdruel
Details
fifo log file (missing water) (5.21 MB, application/octet-stream)
2017-06-02 17:04 UTC, jdruel
Details
vulkan renderer: water is missing (1.20 MB, image/png)
2017-06-02 17:05 UTC, jdruel
Details
opengl renderer: water is ok (979.20 KB, image/png)
2017-06-02 17:05 UTC, jdruel
Details
MarioKart-Mesa17.3-WhiteSquare(fifo) (2.29 MB, application/zip)
2017-12-20 09:13 UTC, jdruel
Details

Description jdruel 2017-03-28 06:20:01 UTC
Created attachment 130493 [details]
mariokart vulkan rendering problem

Mesa-Git, Archlinux x64, R9 Fury, dolphin-emu 5.0.3118
*On mariokart, the intro is dark (instead of white in all other games)
*On mariokart, there's a white square on the left top part of the screen when starting a circuit+no display of the track
*on Gunslinger, there's a part of the image missing.

I've uploaded some comparison pictures between vulkan and opengl renderers.
http://imgur.com/a/MrCcG
I tested on windows (same hardware): the vulkan renderer gives the same picture as opengl, so the glitches are just present on linux.
Comment 1 Christian Lanig 2017-03-28 15:48:34 UTC
I confirm this bug.

Dolphin 5.0-741d230-dirty
Ubuntu 17.04 with MESA git and Kernel 4.11 RC4
Ryzen 7 1700X
RX 480 8GiB
32 DDR4 2933 MHz ECC
Comment 2 Ilia Mirkin 2017-03-28 16:37:43 UTC
I suspect you'll greatly increase the likelihood of getting this issue investigated if you include a dolphin fifo log which can be used to reproduce the issue. [Not sure how those are recorded, I'm sure the dolphin guys will know though.]
Comment 3 jdruel 2017-03-28 16:57:01 UTC
Created attachment 130504 [details]
bad colors on MarioKart (fifo)

I used the fifo player included in dolphin to record 3 images.
Comment 4 jdruel 2017-03-28 16:58:36 UTC
Created attachment 130505 [details]
White Square on MarioKart (fifo)

Same: 3 pictures saved
Comment 5 jdruel 2017-03-28 17:00:53 UTC
Created attachment 130506 [details]
Screen part missing (fifo)

Last one recorded with dolphin's fifo player.
Hope it helps.
Comment 6 jdruel 2017-06-02 17:03:31 UTC
Back to mesa stable 17.1, arch x64, fury r9, I still have some problems with vulkan. The game tested is "Wii Sport Resort".
I've recorded a fifolog
If I select "Vulkan Renderer" in dolphin and if I launch it with
dolphin-emu -b -e 2017-06-02-MissingWater-01.dff
The water is missing.
If I select "OpenGL Renderer" in dolphin and if I launch it with
dolphin-emu -b -e 2017-06-02-MissingWater-01.dff
The water is ok (see screenshots)
If I select "Software Renderer", the water is ok.
Comment 7 jdruel 2017-06-02 17:04:22 UTC
Created attachment 131679 [details]
fifo log file (missing water)
Comment 8 jdruel 2017-06-02 17:05:11 UTC
Created attachment 131680 [details]
vulkan renderer: water is missing
Comment 9 jdruel 2017-06-02 17:05:39 UTC
Created attachment 131681 [details]
opengl renderer: water is ok
Comment 10 jdruel 2017-09-10 19:59:06 UTC
With mesa 17.2, some of the pbs are solved (missing water for example).
But the bugs with mario kart 8 persist:
*On mariokart, the intro is dark (instead of white in all other games)
*On mariokart, there's a white square on the left top part of the screen when starting a circuit+no display of the track

The Dolphin devs say it's ok on their side, so it's probably a driver bug.
(see https://bugs.dolphin-emu.org/issues/10130#change-730141)
Comment 12 jdruel 2017-12-20 09:13:54 UTC
Created attachment 136311 [details]
MarioKart-Mesa17.3-WhiteSquare(fifo)

Latest stable mesa (17.3). Still the same problem. So this is the new fifo log. It replays well with the OpenGl renderer, but has problems with the Radv one.
Comment 14 jdruel 2018-01-13 08:42:15 UTC
Still present in 17.3.2
Comment 15 Samuel Pitoiset 2018-03-01 08:44:33 UTC
Can you still reproduce the issue with latest mesa? If so, can you record new renderdoc traces using the v1.x branch, please? Thanks!
Comment 16 jdruel 2018-03-05 08:25:23 UTC
On Arch, with mesa 17.3.6, I still have the same glitches with vulkan
*On mariokart, the intro is dark (instead of white in all other games)
*On mariokart, there's a white square on the left top part of the screen when starting a circuit+no display of the track+blurry picture
*On WiiSportsResort, there's a white square on the left top part of the screen
OpenGl rendering is perfect (seems to be the same pb as mariokart).
So, here are the renderdoc captures with v1.x (nightly):

https://www.dropbox.com/s/20cbd6y2mrikdvv/MK8-Intro-Vulkan-dolphin-emu_2018.03.05_08.07.03_frame274.rdc?dl=0
https://www.dropbox.com/s/qarmq9andl7jds3/MK8-Intro-OGL-dolphin-emu_2018.03.05_08.07.03_frame83.rdc?dl=0
https://www.dropbox.com/s/u4kldnxzpwsuhns/MK8-Track-Vulkandolphin-emu_2018.03.05_08.07.03_frame3883.rdc?dl=0
https://www.dropbox.com/s/ui10mpc5bm9nl50/MK8-Track-OGL-dolphin-emu_2018.03.05_08.07.03_frame3432.rdc?dl=0
https://www.dropbox.com/s/efygicg43o9qv0p/WiiSportsResort-Vulkan-dolphin-emu_2018.03.05_08.07.03_frame1165.rdc?dl=0
https://www.dropbox.com/s/jpwm1tn088ulgkv/WiiSportsResort-OGL-dolphin-emu_2018.03.05_08.07.03_frame5582.rdc?dl=0
Comment 17 jdruel 2018-04-06 07:29:45 UTC
Tested yesterday on mesa 18.0. Same pbs.
Comment 18 Bas Nieuwenhuizen 2018-05-14 01:15:32 UTC
This should fix the rectangle in Mario Kart:

https://patchwork.freedesktop.org/patch/222558/
Comment 19 MIka R 2018-05-14 18:52:47 UTC
I had the same rectangle bug in Metroid Prime: Trilogy and that patch fixed it for me. Thanks a bunch!
Comment 20 Samuel Pitoiset 2018-05-15 19:59:25 UTC
Should be fixed with https://cgit.freedesktop.org/mesa/mesa/commit/?id=dd102405dea022f6c27bc42176f50f3bb2761ae6

Feel free to re-open if you still have the issue.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.